src/hire/Hire.css
.form-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: white;
}

.Input-email {
    display: flex;
    flex: 1;
    font-weight: 300;
    font-size: 29px;
    letter-spacing: -0.6px;
    color: black;
    border-color: rgb(238, 238, 238);
    border-style: solid;
    border-top: unset;
    border-left: unset;
    border-right: unset;
    border-width: 2px;
    outline: none;
}

::placeholder {
    color: #ACACAC;
    font-weight: 300;
    font-size: 29px;
    letter-spacing: -0.6px;
    text-align: start;
}

.Input-message {
    display: flex;
    flex: 1;
    font-weight: 300;
    font-size: 29px;
    letter-spacing: -0.6px;
    border-width: 2px;
    border-radius: 10px;
    border-color: rgb(238, 238, 238);
    border-style: solid;
    padding: 20px;
    outline: none;
    height: 186px;
    text-align: start;
    resize: none;
}

.Attach-button {
    display: flex;
    flex: 1;
    font-weight: 500;
    font-size: 28px;
    text-align: center;
    color: var(--accent-color);
    background-color: unset;
    outline: none;
    border: none;
}

.Submit-button {
    font-weight: 700;
    font-size: 31px;
    text-align: center;
    color: white;
    background-color: var(--accent-color);
    outline: none;
    border: none;
    height: 93px;
    width: 277px;
    border-radius: 10px;
}

.form-inputs {
    display: flex;
    flex: 1;
    flex-direction: column;
    width: 660px;
}

